# AstroX

./: .gitignore  Astrox.toml  Cargo.toml  lcovBackend.info  package-lock.json  readme.md
.cargo-husky/hooks/: commit-msg  pre-commit  pre-commit-msg  pre-push
.github/workflows/: codeql-analysis.yml  pr.yml  relase.yml
git_hooks/: commit-msg  commit-msg-windows-example  pre-commit  pre-push
src/: main.rs
src/backend/: Cargo.toml
src/backend/src/: main.rs
src/backend/src/api/: mod.rs
src/backend/src/api/hello/: get.rs  post.rs
src/backend/src/api/protected/: get.rs
src/backend/src/api/space_x/: get.rs
src/backend/src/args/: collect_args.rs
src/backend/src/auth/: auth_middleware.rs  login.rs  mod.rs
src/backend/src/cors/: get_cors_options.rs  mod.rs
src/backend/src/session/: flash_messages.rs  mod.rs  session_middleware.rs  validate_session.rs
src/backend/src/ssr_routes/: login.rs  mod.rs  post_login.rs
src/backend/src/ssr_routes/tests/: login_test.rs  mod.rs
src/cli/: mod.rs
src/cli/args/: collect_args.rs  mod.rs
src/cli/cmds/: cmd_list.rs  execute_cmd.rs  interactive.rs  mod.rs
src/cli/cmds/tests/: cmd_list_test.rs  interactive_test.rs  mod.rs
src/cli/config/: collect_args.rs  create_dotenv.rs  get_config.rs  mod.rs  toml.rs
src/cli/config/tests/: get_config_test.rs  mod.rs
src/cli/config_maker/: collect_args.rs  config.rs  mod.rs  toml.rs
src/cli/development/: mod.rs  start_development.rs
src/cli/pre_run/: execute.rs  mod.rs  system_checks.rs
src/cli/pre_run/cargo/: checks.rs  mod.rs  validate.rs
src/cli/pre_run/npm/: checks.rs  validate.rs
src/cli/pre_run/utils/: check_semver.rs  first_run.rs  git_hooks.rs  mod.rs
src/cli/production/: build_production.rs  mod.rs  start_production.rs
src/cli/tests/: execute.rs
src/cli/utils/: terminal.rs
src/frontend/: .eslintrc.cjs  astro.config.mjs  eslint.config.js  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  vitest.config.ts  vitest.workspace.ts
src/frontend/coverage/: cobertura-coverage.xml  coverage-final.json  coverage-summary.json
src/frontend/src/: env.d.ts
src/frontend/src/axiosInstance/: axiosBackendInstance.test.ts  axiosBackendInstance.ts  index.ts
src/runner/: mod.rs
src/runner/args/: collect_args.rs
src/runner/development/: start_development.rs
src/runner/pre_run/: git_hooks.rs  mod.rs  npm.rs  system_checks.rs
src/runner/production/: mod.rs  start_production.rs
src/runner/utils/: terminal.rs
src/runners/: development.rs  linter.rs  mod.rs  production.rs  system_checks.rs  terminal.rs
(+48 files in other folders)
