[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-files = "0.6.4"
actix-cors = "0.7.0"
actix-utils = "3.0.1"
futures-util = "0.3.30"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11.3"
anyhow = "1.0"
dotenv = "0.15.0"
thiserror = "1.0.24"
pin-project = "1.1.5"
futures = "0.3.30"
